--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easyphrase",
-  "version": "0.0.2-1",
+  "version": "1.0.0",
   "description": "Password Generator based on the EFF dice-based passphrase generator.",
   "main": "cli",
   "dependencies": {
